fixed white space on x

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,6 @@
 .sections {
-  margin-top: 13rem;
+  margin-top: 17rem;
+  width: 100%;
 }
 
 .aboutMe {
