--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -60,7 +60,7 @@
 
 @media only screen and (max-width: 600px) {
   .singleCard {
-    width: 350px;
+    width: 380px;
     height: 600px;
   }
 
